test/ui/src/compile_fail/std/emit_props_non_display_interpolated.rs
fn main() {
    let x = NotDisplay;

    emit::emit!("template {x}");
}

struct NotDisplay;
